Add Function for Permutation Test

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(TimiFSBar)
 export(TimiGeneChord)
 export(TimiGeneNetwork)
 export(TimiGenePair)
+export(TimiPermFDR)
 export(TimiPrePropress)
 import(RColorBrewer)
 import(circlize)
