update description and namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(TimiCellChord)
 export(TimiCellNetwork)
 export(TimiCellPair)
 export(TimiCheckEvent)
+export(TimiCor)
 export(TimiDotplot)
 export(TimiEnrich)
 export(TimiFS)
