--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(TimiDotplot)
 export(TimiEnrich)
 export(TimiFS)
 export(TimiFSBar)
+export(TimiFisher)
 export(TimiGeneChord)
 export(TimiGeneNetwork)
 export(TimiGenePair)
